rajout de la fonctionnalité Start/Stop du timer.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<button class="lapResetBtn">Lap</button>
 				</div> 
 
-				<div class="mainStartbtn">
+				<div class="mainStartBtn">
 					<button class="startBtn">Start</button>
 				</div>	
 
