Modification de l'apparence du LapReset button, rajout de l'option du reset sur le LapResetBtn, modification de l'apparence global

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 
-	<body>
+	<body style = "padding-left: 100px;padding-right: 100px;">
 		<div class="container">
 			<div class="time">
 				<span id="minutes">00:</span>
