--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 
 	<body style = "padding-left: 100px;padding-right: 100px;">
 		<div class="container">
-			<div class="time">
+			<div class="time" style="padding-bottom: 0px;margin-bottom: 0px;
+			border-bottom-style: solid;border-bottom-width: 5px;
+			border-top-style: solid;border-top-width: 5px;
+			border-left-style: solid;border-left-width: 2px;
+			border-right-style: solid;border-right-width: 2px;margin-top: 5px;">
 				<span id="minutes">00:</span>
 				<span id="seconds">00:</span>
 				<span id="miliseconds">00</span>
